# github-leak-scanner

./: .gitignore  README.md  action.yml  conftest.py  pyproject.toml  test_secret.txt
.github/workflows/: ci.yml
rules/: secrets.yar
src/: __init__.py  cli.py  entropy.py  fetcher.py  html_builder.py  models.py  patterns.py  reporter.py  scanner.py  validator.py  yara_downloader.py  yara_engine.py
src/github_leak_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_entropy.py  test_fetcher.py  test_html.py  test_patterns.py  test_scanner.py  test_yara.py
