[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-leak-scanner"
version = "1.0.0"
authors = [
  { name="Dox46" }
]
description = "Industrial-grade YARA-based Git secret scanner."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "requests>=2.0.0",
    "boto3>=1.20.0",
    "GitPython>=3.1.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Dox46/github-leak-scanner"

[project.scripts]
leak-scan = "src.cli:main"

[tool.setuptools]
packages = ["src", "rules", ".bin"]